add_subdirectory(shared_test_lib)

add_subdirectory(test_utility)

add_subdirectory(test_io)

add_subdirectory(test_memory)

add_subdirectory(test_bind)

add_subdirectory(test_invoke)

add_subdirectory(test_container)

add_subdirectory(test_debug)

add_subdirectory(test_gc)

add_subdirectory(test_operators)

add_subdirectory(test_concurrent)

add_subdirectory(test_section)
